--- a/static/subscription.css
+++ b/static/subscription.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #fff;
+  background-color:#fff;
   color:#1e272e;
   padding: 0;
   margin: 0;
@@ -85,7 +85,7 @@ input[type="text"].inp_text1{
   width:500px;
   outline: none;
   margin-top: 30px;
-  margin-left:180px;
+  margin-left:200px;
   padding-left:20px;
   border:0.1px solid lightgray;
 }
@@ -94,14 +94,6 @@ input[type="text"].inp_text1:hover{
   border-color: rgba(234,76,137,0.4);
   background-color: #fff;
   box-shadow: 0 0 0 4px rgb(234 76 137 / 10%);
-}
-.fa-search {
-  position: relative;
-  left:90vh;
-  /* left: 93vh; */
-  font-size:18px;
-  color:gray;
-  cursor: pointer;
 }
 header{
   background:#e5e4e2;
@@ -153,7 +145,9 @@ header ul li{
     /* width:120%; */
     /* margin-left:-100px; */
   }
-  
+  footer span{
+    color:#fff;
+  }
   .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -338,3 +332,105 @@ footer ul li{
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 } 
+.dropdown .dropdown-menu span{
+  color:black;
+}
+/* Laptop */
+@media(max-width:1024px){
+  .logo{
+    height:75px;
+    width:220px;
+    margin-left: 55px;
+  }
+  nav ul{
+    margin-right:140px;
+  }
+  nav ul li{
+    display: inline-block;
+    line-height: 100px;
+    margin:0 -35px;
+  }
+  input[type="text"].inp_text1{
+    height: 40px;
+    width:360px;
+    margin-left:80px;
+  }
+  .fa-search {
+    position: relative;
+    left:46vh;
+  }
+  header ul{
+    float: left;
+    margin-left:55px;
+  }
+  header ul li{
+    display:inline-block;
+    color: white;
+    line-height: 22px;
+    margin: 0 18px;
+    font-size: 16px;
+    color:white;
+  }
+   .dropdown .dropdown-menu span{
+    position: relative;
+    right:40px;
+  } 
+  #active{
+    background:#77dd77;
+    transition: .5s;
+    padding: 6px 12px;
+    border-radius: 4px;
+  }
+  #active:hover{
+    background:#2e8b57;
+  }
+  .active{
+    background:#77dd77;
+    transition: .5s;
+    padding: 6px 12px;
+    border-radius: 4px;
+    text-decoration: none;
+  } 
+  .active:hover{
+    background:#2e8b57;
+  }
+  .alink{
+      color:white;
+      text-decoration: none;
+  }
+  .toggle{
+    background-color: white;
+    width: 50px;
+    height: 25px;
+    border-radius: 200px;
+    cursor: pointer;
+    position: relative;
+    top:-62px;
+    left:95px;
+    margin-bottom: -24px;
+    border : 2px solid black;
+    transition: 0s;
+  }
+  footer{
+    background: #177245;
+    padding: 30px 0;
+    margin-top: 30px;
+  }
+
+  .footer-column {
+    flex-basis: 27%;
+  }
+  .footer-column1 {
+    flex-basis: 18%;
+  } 
+  footer span{
+    position: relative;
+    right:10px;
+  }
+}
+@media(max-width:1440px){
+  .fa-search {
+    position: relative;
+    left:66vh;
+  }
+}
