--- a/static/category.css
+++ b/static/category.css
@@ -73,7 +73,7 @@ body{
     width:500px;
     outline: none;
     margin-top: 30px;
-    margin-left:180px;
+    margin-left:200px;
     padding-left:20px;
     border:0.1px solid lightgray;
   }
@@ -82,14 +82,6 @@ body{
     border-color: rgba(234,76,137,0.4);
     background-color: #fff;
     box-shadow: 0 0 0 4px rgb(234 76 137 / 10%);
-  }
-  .fa-search {
-    position: relative;
-    left:90vh;
-    /* left: 93vh; */
-    font-size:18px;
-    color:gray;
-    cursor: pointer;
   }
   header{
     background:#e5e4e2;
@@ -321,7 +313,7 @@ body{
     main{
       max-width: 1500px;
       width:85%;
-      margin:200px auto;
+      margin:210px auto;
       /* flex-wrap: wrap;
       justify-content: space-between; */
     
@@ -332,13 +324,14 @@ body{
       display: inline-block;
       /* flex:1 1 300px; */
       /* text-align: center; */
-      height:450px;
+      height:400px;
       border: 1px solid lightgray;
       margin-top: 10px;
       /* margin:40px; */
       width:260px;
       margin:30px; 
       margin-left: 28px;
+      box-shadow: none;
     }
     main .card .image{
       height: 50%;
@@ -352,7 +345,7 @@ body{
     main .card .caption{
       padding-left: 1em;
       text-align: left;
-      line-height: 1.5em;
+      line-height: 0.5em;
       height:25%;
       font-family: Arial, Helvetica, sans-serif;
       margin-top:80px;
@@ -362,6 +355,6 @@ body{
     }
     main .card button{
       width:50%;
-      margin-top:16px;
+      margin-top:5px;
       margin-left:60px;
     }
