--- a/static/contact.css
+++ b/static/contact.css
@@ -73,7 +73,7 @@ input[type="text"].inp_text1{
   width:500px;
   outline: none;
   margin-top: 30px;
-  margin-left:180px;
+  margin-left:200px;
   padding-left:20px;
   border:0.1px solid lightgray;
 }
@@ -83,17 +83,9 @@ input[type="text"].inp_text1:hover{
   background-color: #fff;
   box-shadow: 0 0 0 4px rgb(234 76 137 / 10%);
 }
-.fa-search {
-  position: relative;
-  left:90vh;
-  /* left: 93vh; */
-  font-size:18px;
-  color:gray;
-  cursor: pointer;
-}
 header{
   background:#e5e4e2;
-  /* height: 60px; */
+  height: 60px;
   position: static;
 }
 header ul{
@@ -125,6 +117,16 @@ header ul li{
   text-decoration: none;
 } 
 .active:hover{
+  background:#2e8b57;
+}
+.active1{
+  background:#77dd77;
+  transition: .5s;
+  padding: 6px 12px;
+  border-radius: 4px;
+  text-decoration: none;
+} 
+.active1:hover{
   background:#2e8b57;
 }
 .alink{
@@ -390,4 +392,5 @@ button.contact_form_submit:hover {
   text-align: center;
   max-width: 80%;
   }
+
  
