--- a/static/upload.css
+++ b/static/upload.css
@@ -1,25 +1,29 @@
 body{
-    background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url(../static/images/RT72Wv.jpg);
+    background-image: url(../static/images/uplbg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 section{
     padding:200px;
-    margin-left:420px;
+    margin-left:100px;
 }
 h1{
     font-family: sans-serif;
 }
 hr{
-    width:50%;
-    margin-left:-20px;
-    margin-bottom: 30px;
+    width:31.7%;
+    position: relative;
+    right:15px;
+    bottom:5px;
+    /* margin-left:20px;
+    margin-bottom: 30px; */
 }
 input{
     height:40px;
     width:300px;
     padding-left:15px;
     font-size:17px;
+    border:none;
 }
 input:focus{
     outline: none;
@@ -29,22 +33,26 @@ input::placeholder{
 }
 input[type="file"]{
     font-size: 16px;
-    margin-left:37px;
+    /* margin-left:37px; */
     border: none;
     margin-top:5px;
     color:white;
+    position: relative;
+    right:15px;
 }
-input[type="submit"]{
-    background-color: rgb(0, 0, 0);
-    color:white;
-    width:120px;
-    cursor:pointer;
-    border-radius: 20px;
-    margin-left:94px;
-    font-size:17px;
-    margin-top:-10px;
-    /* border-color: white; */
-    margin-bottom: -7px;
-    /* border: none; */
-    border-color: #fff;
+select{
+    height:40px;
+    width:160px;
+    padding-left:15px;
+    margin-left:15px;
+    border:none;
+    /* text-align: center; */
+}
+select:focus{
+    outline:none;
+}
+label{
+    color:#fff;
+    font-size:18px;
+    margin-right:10px;
 }
