--- a/static/pstatic.css
+++ b/static/pstatic.css
@@ -113,7 +113,7 @@ input[type="text"].inp_text1{
   width:500px;
   outline: none;
   margin-top: 30px;
-  margin-left:180px;
+  margin-left:200px;
   padding-left:20px;
   border:0.1px solid lightgray;
 }
@@ -259,7 +259,7 @@ footer ul li{
     padding:0;
   }
   .h3one{
-    margin-top: 65px;
+    margin-top: 75px;
     margin-left:200px;
     margin-bottom: 3px;
   }
@@ -269,10 +269,10 @@ footer ul li{
     margin-bottom: 3px;
   }
   .column .card{
-    height:470px;
+    height:380px;
     width:300px;
     margin-left:70px;
-    margin-top:50px;
+    margin-top:60px;
     border-radius: 10px;
   }
   .column h4{
@@ -349,7 +349,7 @@ footer ul li{
     font-size: 18px;
     margin-right:3px;
   }
- .cartb {
+ .add {
   position: relative;
   background-color: rgb(230, 34, 77);
   border-radius: 5px;
@@ -368,7 +368,7 @@ footer ul li{
   margin-left:63px;
 }
 
-.cartb::before {
+.add::before {
   content: "";
   background-color: rgb(248, 50, 93);
   width: 0;
@@ -381,7 +381,7 @@ footer ul li{
   display: inline-block;
 }
 
-.cartb:hover::before {
+.add:hover::before {
   width: 100%;
 }
 .buyb {
