--- a/static/payment.css
+++ b/static/payment.css
@@ -60,6 +60,13 @@
   font-size: 15px;
   text-transform: none;
 }
+.container form .row .col .inputBox textarea{
+  width: 100%;
+  border:1px solid #ccc;
+  padding:10px 15px;
+  font-size: 15px;
+  text-transform: none;
+}
 .container form .row .col .inputBox select{
   width: 100%;
   border:1px solid #ccc;
@@ -71,6 +78,9 @@
   border:1px solid #000;
 }
 .container form .row .col .inputBox input:focus{
+  border:1px solid #000;
+}
+.container form .row .col .inputBox textarea:focus{
   border:1px solid #000;
 }
 
