--- a/static/subscription.css
+++ b/static/subscription.css
@@ -272,6 +272,7 @@ footer ul li{
   width: 350px;
   height:400px;
   margin: 40px;
+  margin-top:20px;
   padding: 20px;
   border: 1px solid green;
   border-radius: 20px;
